WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157897
Web Inspector: timelines should not update via requestAnimationFrame unless Web Inspector is visible
https://bugs.webkit.org/show_bug.cgi?id=157897
Summary
Web Inspector: timelines should not update via requestAnimationFrame unless W...
Blaze Burg
Reported
2016-05-19 09:04:00 PDT
.
Attachments
Proposed Fix
(14.67 KB, patch)
2016-05-19 09:21 PDT
,
Blaze Burg
timothy
: review+
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(1.40 MB, application/zip)
2016-05-19 10:18 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2016-05-19 09:04:27 PDT
<
rdar://problem/26330802
>
Blaze Burg
Comment 2
2016-05-19 09:21:48 PDT
Created
attachment 279393
[details]
Proposed Fix
Build Bot
Comment 3
2016-05-19 10:18:04 PDT
Comment on
attachment 279393
[details]
Proposed Fix
Attachment 279393
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1348904
Number of test failures exceeded the failure limit.
Build Bot
Comment 4
2016-05-19 10:18:07 PDT
Created
attachment 279399
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Blaze Burg
Comment 5
2016-05-19 10:57:17 PDT
Committed
r201171
: <
http://trac.webkit.org/changeset/201171
>
Joseph Pecoraro
Comment 6
2016-10-17 20:47:12 PDT
Comment on
attachment 279393
[details]
Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=279393&action=review
> Source/WebInspectorUI/UserInterface/Views/TimelineRecordingContentView.js:443 > + if (typeof startTime === "number" && !isNaN(this._currentTime)) > this._currentTime = startTime; > - else if (!isNaN(this._currentTime)) { > + else {
I don't understand this logic change. It ends up breaking the backend informing the frontend what the current time is in the common case (a user inspecting a local page). I put up a patch to revert this in
bug 163583
. If you think this is still needed for some reason, please comment there. I believe this patch was meant for Safari WebDriver --inspect behavior, but I don't understand why we wouldn't set the current time here if we are visible and have a start time.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug