Source/WebInspectorUI/UserInterface/Base/Object.js
@@ -216,4 +216,5 @@ WebInspector.Notification = {
     ExtraDomainsActivated: "extra-domains-activated",
     TabTypesChanged: "tab-types-changed",
     DebugUIEnabledDidChange: "debug-ui-enabled-did-change",
+    VisibilityStateDidChange: "visibility-state-did-change",
 };
